# teachingPy

./: .gitignore  pyproject.toml
notebooks/: 01_graphical_solutions.py
teachingpy/operations_research/: graphical.py
tests/: test_teachingpy.py
